# Cpp06

./: CMakeLists.txt  README.md  subject.md
CPP_Module_06/ex00/: Makefile  ScalarConverter.cpp  ScalarConverter.hpp  main.cpp
CPP_Module_06/ex01/: Makefile  Serializer.hpp  main.cpp
CPP_Module_06/ex02/: Makefile  main.cpp
